@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.user.common {

        abstract class AbstractUserView [[AbstractUserView.html]] {
            #AbstractUserView(Map<String, PageModeContentFactory>, String)
        }

        abstract class AbstractGroupView [[AbstractGroupView.html]] {
            +AbstractGroupView(Map<String, PageModeContentFactory>, String)
        }

        abstract class AbstractActorView [[AbstractActorView.html]] {
            +AbstractActorView(Map<String, PageModeContentFactory>, String)
        }

        abstract class AbstractRankingView [[AbstractRankingView.html]] {
            #AbstractRankingView(Map<String, PageModeContentFactory>, String)
        }

        abstract class AbstractPersonView [[AbstractPersonView.html]] {
            +AbstractPersonView(Map<String, PageModeContentFactory>, String)
        }

        com.hack23.cia.web.impl.ui.application.views.common.AbstractView <|-- AbstractUserView
        AbstractActorView <|-- AbstractGroupView
        AbstractUserView <|-- AbstractActorView
        AbstractUserView <|-- AbstractRankingView
        AbstractActorView <|-- AbstractPersonView
    }

    namespace com.hack23.cia.web.impl.ui.application.views.common {
        abstract class AbstractView [[../../common/AbstractView.html]] {
            #pageActionEventHelper: PageActionEventHelper
            #pageLinkFactory: PageLinkFactory
        }
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
